申込状況のテスト実装